--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "recharts": "^2.13.3"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^24.x",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vercel/node": "^3.0.0",
