--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "babylon-fin",
   "private": true,
@@ -7,6 +8,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@google/genai": "^1.3.0",
