--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 
 {
-  "name": "babylon-fin",
+  "name": "babylon-fin-pro",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
